Fix T70077: GPenci Controls points are not displayed in right location

The problem was the unit matrix was not set in the uniform variable.